# esweek24

./: .gitignore  .gitmodules  README.md
docs/drawio/: ControlLoop.drawio  esweek24-experiment-setup.drawio
experiments/: .gitignore  app.overlay  build_FlexPRET.sh  build_FlexPRET_threaded.sh  prj.conf
experiments/C/FlexPRET/: .gitignore  Makefile  main.c
experiments/C/RP2040/: CMakeLists.txt
experiments/C/RP2040/app/: CMakeLists.txt  main.c
experiments/C/RPi/: main.c
experiments/C/nrf52/: CMakeLists.txt  app.overlay  prj.conf
experiments/lf/: Kconfig  app.overlay  prj.conf
experiments/lf/src/: Control_FlexPRET.lf  Control_RP2040.lf  Control_RPi.lf  Control_nrf52.lf  FlexPRET_Control.lf  FlexPRET_Parallel.lf  FlexPRET_Work.lf  RP2040_Control.lf  RP2040_Work.lf  RPi_Control.lf  RPi_Work.lf  nrf52_Control.lf  nrf52_Parallel.lf  nrf52_Work.lf
experiments/lib/: common.h  lf_common.h  libControl.lf  libWork.lf
experiments/lib/FlexPRET/: interrupt.c
experiments/lib/RP2040/: interrupt.c  (+2 more)
lf/: app.overlay  build_FlexPRET.sh
lf/lib/: common.c  common.cmake  libControl.lf
lf/src/: Control_FlexPRET.lf  Control_RP2040.lf  Control_nrf52.lf
results/RP2040/: int-it1000.txt  noint-it1000.txt
results/nrf52/: int-it1000.txt  noint-it1000.txt
scripts/: genwaves.py  lib.sh  normal.py  plot-control.py  plot-seqvspar.py  plot.py  run_FlexPRET.sh  run_RP2040.sh  run_RPi.sh  run_nrf52.sh  uart-interrupts.py  uart.py
scripts/remote/: RPi_run_C_benchmark.sh  RPi_run_lf_benchmark.sh
wave/: interrupts-periodic.csv  interrupts-sporadic.csv  setup.dwf3work
(+8 files in other folders)
